# playful-snake-arena

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  architecture.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  supervisord.conf
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  test_main.py  verify_api.py
backend/tests/: test_main.py  test_verify_api.py  verify_api.py
frontend/: Dockerfile  PACKAGE_EXPLAINED.md  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: index.css
frontend/src/api/: api.ts  mockApi.test.ts  mockApi.ts
frontend/src/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/src/components/game/: GameBoard.tsx  GameControls.tsx
frontend/src/components/leaderboard/: LeaderboardTable.tsx
frontend/src/components/spectate/: LiveGamesList.tsx  SpectatorView.tsx
frontend/src/components/ui/: input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: gameLogic.test.ts
frontend/src/pages/: Index.tsx  Watch.tsx  WatchGame.tsx
src/: App.tsx
src/api/: mockApi.test.ts  mockApi.ts
src/components/layout/: Header.tsx
src/components/spectate/: LiveGamesList.tsx  SpectatorView.tsx
src/components/ui/: button.tsx
src/hooks/: useGame.ts
src/lib/: gameLogic.ts
src/pages/: Leaderboard.tsx  Login.tsx  Signup.tsx
src/types/: game.ts
